[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/SupplyCenterTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/Settings.gd" type="Script" id=2]
[ext_resource path="res://Fonts/supply-center-font/SupplyCenter-0W9nz.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/MenuThings/Chalk/CloseBox.png" type="Texture" id=4]
[ext_resource path="res://Menu/Slider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/MenuThings/Chalk/CheatCodeEnterBox.png" type="Texture" id=6]
[ext_resource path="res://Menu/CheatCodeLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/MenuThings/Chalk/buttons/longbutton0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/MenuThings/Chalk/buttons/longbutton2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/MenuThings/Chalk/buttons/longbutton1.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Settings" type="Node2D"]
position = Vector2( 38, 62 )
script = ExtResource( 2 )

[node name="Main" type="Node2D" parent="."]

[node name="Title" type="Label" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 250.0
margin_top = 6.0
margin_right = 805.0
margin_bottom = 135.0
theme = SubResource( 2 )
text = "Settings"
align = 1

[node name="OpenSound" type="Button" parent="Main"]
margin_left = 383.0
margin_top = 137.0
margin_right = 679.0
margin_bottom = 187.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Sound"
flat = true

[node name="Longbutton0" type="Sprite" parent="Main/OpenSound"]
position = Vector2( 150, 27 )
texture = ExtResource( 8 )

[node name="OpenControls" type="Button" parent="Main"]
margin_left = 383.0
margin_top = 207.0
margin_right = 679.0
margin_bottom = 257.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Controls"
flat = true

[node name="Longbutton1" type="Sprite" parent="Main/OpenControls"]
position = Vector2( 150, 24 )
texture = ExtResource( 10 )

[node name="OpenCheatCodes" type="Button" parent="Main"]
margin_left = 383.0
margin_top = 277.0
margin_right = 679.0
margin_bottom = 327.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Cheat Codes"
flat = true

[node name="Longbutton2" type="Sprite" parent="Main/OpenCheatCodes"]
position = Vector2( 147, 25 )
texture = ExtResource( 9 )

[node name="Sound" type="Node2D" parent="."]
visible = false

[node name="Title" type="Label" parent="Sound"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 250.0
margin_top = 6.0
margin_right = 805.0
margin_bottom = 135.0
theme = SubResource( 2 )
text = "Sound"
align = 1

[node name="Label" parent="Sound" instance=ExtResource( 5 )]
margin_left = 169.0
margin_top = 128.0
margin_right = 342.0
margin_bottom = 218.0
audio_index = 0

[node name="Label2" parent="Sound" instance=ExtResource( 5 )]
margin_left = 169.0
margin_top = 198.0
margin_right = 342.0
margin_bottom = 288.0
text = "music"

[node name="Label3" parent="Sound" instance=ExtResource( 5 )]
margin_left = 169.0
margin_top = 268.0
margin_right = 342.0
margin_bottom = 358.0
text = "sfx"
audio_index = 2

[node name="Controls" type="Node2D" parent="."]
visible = false
position = Vector2( 526, 241 )

[node name="Title" type="Label" parent="Controls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -277.0
margin_top = -240.0
margin_right = 278.0
margin_bottom = -111.0
theme = SubResource( 4 )
text = "Controls"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Controls"]
margin_left = -137.0
margin_top = -128.0
margin_right = 730.0
margin_bottom = 316.0
theme = ExtResource( 1 )
text = "run - a/d
climb - w/s
jump - space
drop - s+space

pause - tab
respawn - r"

[node name="CheatCodes" type="Node2D" parent="."]
visible = false
position = Vector2( 60, 15 )

[node name="CodeInput" type="TextEdit" parent="CheatCodes"]
margin_left = 171.0
margin_right = 610.0
margin_bottom = 44.0
theme = ExtResource( 1 )

[node name="EnterCode" type="Button" parent="CheatCodes"]
margin_left = 626.0
margin_top = -6.0
margin_right = 772.0
margin_bottom = 49.0
focus_mode = 0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.65098, 0.65098, 0.65098, 1 )
enabled_focus_mode = 0
text = "Enter"
flat = true

[node name="CheatCodeEnterBox" type="Sprite" parent="CheatCodes"]
position = Vector2( 699, 20 )
texture = ExtResource( 6 )

[node name="TypeCode" type="Label" parent="CheatCodes"]
margin_left = 172.0
margin_top = 5.0
margin_right = 453.0
margin_bottom = 43.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.466667, 0.466667, 0.466667, 1 )
text = "type Code here"

[node name="InvalidCode" type="Label" parent="CheatCodes"]
visible = false
margin_left = 172.0
margin_top = 5.0
margin_right = 453.0
margin_bottom = 43.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0.639216, 0.639216, 1 )
text = "Invalid Code"

[node name="Codes" type="Node2D" parent="CheatCodes"]
position = Vector2( 175, 87 )

[node name="Catnip" parent="CheatCodes/Codes" instance=ExtResource( 7 )]

[node name="InfiniteJump" parent="CheatCodes/Codes" instance=ExtResource( 7 )]
margin_top = 60.0
margin_right = 66.0
margin_bottom = 98.0

[node name="RainbowRat" parent="CheatCodes/Codes" instance=ExtResource( 7 )]
margin_top = 120.0
margin_right = 66.0
margin_bottom = 158.0

[node name="ChangeOnJump" parent="CheatCodes/Codes" instance=ExtResource( 7 )]
margin_top = 180.0
margin_right = 66.0
margin_bottom = 218.0

[node name="Ghost" parent="CheatCodes/Codes" instance=ExtResource( 7 )]
margin_top = 240.0
margin_right = 66.0
margin_bottom = 278.0

[node name="LabRat" parent="CheatCodes/Codes" instance=ExtResource( 7 )]
margin_top = 300.0
margin_right = 66.0
margin_bottom = 338.0

[node name="Close" type="Button" parent="."]
margin_left = 891.0
margin_top = -6.0
margin_right = 951.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( -27, 85 )
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "X"
flat = true
expand_icon = true

[node name="CloseBox" type="Sprite" parent="."]
position = Vector2( 921, 17 )
texture = ExtResource( 4 )

[connection signal="button_down" from="Main/OpenSound" to="." method="_on_OpenSound_button_down"]
[connection signal="button_down" from="Main/OpenControls" to="." method="_on_OpenControls_button_down"]
[connection signal="button_down" from="Main/OpenCheatCodes" to="." method="_on_OpenCheatCodes_button_down"]
[connection signal="text_changed" from="CheatCodes/CodeInput" to="." method="_on_CodeInput_text_changed"]
[connection signal="button_down" from="CheatCodes/EnterCode" to="." method="_on_EnterCode_button_down"]
[connection signal="toggle_code" from="CheatCodes/Codes/Catnip" to="." method="_on_Catnip_toggle_code"]
[connection signal="toggle_code" from="CheatCodes/Codes/InfiniteJump" to="." method="_on_InfiniteJump_toggle_code"]
[connection signal="toggle_code" from="CheatCodes/Codes/RainbowRat" to="." method="_on_RainbowRat_toggle_code"]
[connection signal="toggle_code" from="CheatCodes/Codes/ChangeOnJump" to="." method="_on_ChangeOnJump_toggle_code"]
[connection signal="toggle_code" from="CheatCodes/Codes/Ghost" to="." method="_on_Ghost_toggle_code"]
[connection signal="toggle_code" from="CheatCodes/Codes/LabRat" to="." method="_on_LabRat_toggle_code"]
[connection signal="button_down" from="Close" to="." method="_on_Close_button_down"]
